import Foundation

enum ChooseBrowserAppBootstrap {
    static let name = "ChooseBrowser"
}
